<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Start screen-->
    <string name="app_name">Chess Master</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_screen_player_search_button">Search Player</string>
    <string name="start_screen_game_search_button">Search Game</string>

    <!--compare screen -->
    <string name="compare_screen_result">Result:</string>
    <string name="compare_screen_result_white">W</string>
    <string name="compare_screen_result_black">B</string>
    <string name="compare_screen_result_draw">D</string>
    <string name="compare_screen_rating">Rating:</string>
    <string name="compare_screen_rating_min">min</string>
    <string name="compare_screen_rating_max">max</string>
    <string name="compare_screen_rating_checkedbox_at_least_one">at least one</string>
    <string name="compare_screen_rating_checkedbox_both">both</string>
    <string name="compare_screen_search_button">Search</string>

    <!--game search screen -->
    <string name="game_search_screen_result">Result:</string>
    <string name="game_search_screen_result_white">White</string>
    <string name="game_search_screen_result_black">Black</string>
    <string name="game_search_screen_result_draw">Draw</string>
    <string name="game_search_screen_rating">Rating:</string>
    <string name="game_search_screen_rating_min">min</string>
    <string name="game_search_screen_rating_max">max</string>
    <string name="game_search_screen_whiteopening">White opening</string>
    <string name="game_search_screen_whiteopening_1st">1st</string>
    <string name="game_search_screen_whiteopening_2nd">2nd</string>
    <string name="game_search_screen_whiteopening_3rd">3rd</string>
    <string name="game_search_screen_blackopening">Black opening</string>
    <string name="game_search_screen_blackopening_1st">1st</string>
    <string name="game_search_screen_blackopening_2nd">2nd</string>
    <string name="game_search_screen_blackopening_3rd">3rd</string>
    <string name="game_search_screen_eco">Eco:</string>
    <string name="game_search_screen_button_search">Search</string>

    <!--player search screen-->
    <string name="player_search_screen">Search by LastName</string>
    <string name="player_search_screen_search_button">Search</string>

    <!--player profile screen-->
    <string name="player_profile_screen_player_name">Name:</string>
    <string name="player_profile_screen_player_name_textView">Thomas Kok</string>
    <string name="player_profile_screen_player_rating">Recent Rating:</string>
    <string name="player_profile_screen_player_rating_textView">5642</string>
    <string name="player_profile_screen_player_number_of_game">Number of games:</string>
    <string name="player_profile_screen_player_number_of_game_textView">23</string>
    <string name="player_profile_screen_player_white_opening">White opening pref.:</string>
    <string name="player_profile_screen_player_white_opening_first">O</string>
    <string name="player_profile_screen_player_white_opening_second">O</string>
    <string name="player_profile_screen_player_white_opening_third">0</string>
    <string name="player_profile_screen_player_white_opening_first_move">E34</string>
    <string name="player_profile_screen_player_white_opening_second_move">E56</string>
    <string name="player_profile_screen_player_white_opening_third_move">E45</string>

    <!--Game search Result List screen-->

    <!--Game Detail screen-->
    <string name="game_detail_screen_player_black">Black:</string>
    <string name="game_detail_screen_player_white">White:</string>
    <string name="game_detail_screen_player_black_name">Result:</string>
    <string name="game_detail_screen_player_white_name">Result:</string>
    <string name="game_detail_screen_player_move">Move:</string>
    <string name="game_detail_screen_player_move_out">Out</string>
    <string name="game_detail_screen_player_game">Game:</string>
    <string name="game_detail_screen_player_game_out">Out</string>
    <string name="game_detail_screen_next_button"></string>
    <string name="game_detail_screen_previous_button"></string>
    <string name="game_detail_screen_compare_button">Compare</string>
    <string name="game_detail_screen_result">Result:</string>
    <string name="game_detail_screen_result_display">result</string>
    <string name="game_detail_screen_player_move_out_one">100</string>
    <string name="game_detail_screen_player_move_out_two">100</string>
    <string name="game_detail_screen_player_game_out_one">100</string>
    <string name="game_detail_screen_player_game_out_two">100</string>
</resources>
