<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_result"
            android:id="@+id/fGSS_Result_TextView"
            android:layout_gravity="left|top" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_search_screen_result_white"
            android:id="@+id/fGSS_Result_RadioButton_White"
            android:layout_gravity="center_horizontal|top" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_search_screen_result_black"
            android:id="@+id/fGSS_Result_RadioButton_Black"
            android:layout_gravity="center" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_search_screen_result_draw"
            android:id="@+id/fGSS_Result_RadioButton_Draw"
            android:layout_gravity="center_horizontal|bottom" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_rating"
            android:id="@+id/fGGS_Rating_TextView"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_rating_min"
            android:id="@+id/fGGS_Rating_TextView_Min"
            android:layout_gravity="center_horizontal|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_rating_max"
            android:id="@+id/fGGS_Rating_TextView_Max"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/fGGS_Rating_EditText_Min"
            android:layout_gravity="right|top" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/fGGS_Rating_EditText_Max"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_whiteopening"
            android:id="@+id/fGGS_WhiteOpening_TextView"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_whiteopening_1st"
            android:id="@+id/fGGS_WhiteOpening_TextView_1st"
            android:layout_gravity="center_horizontal|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_whiteopening_2nd"
            android:id="@+id/fGGS_WhiteOpening_TextView_2nd"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_whiteopening_3rd"
            android:id="@+id/fGGS_WhiteOpening_TextView_3rd"
            android:layout_gravity="center_horizontal|bottom" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_WhiteOpening_EditText_1st"
            android:layout_gravity="right|top"
            android:inputType="textNoSuggestions"
            android:ems="5"
            android:editable="false" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_WhiteOpening_EditText_2nd"
            android:layout_gravity="right|center_vertical"
            android:ems="5"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_WhiteOpening_EditText_3rd"
            android:layout_gravity="right|bottom"
            android:ems="5"
            android:inputType="textNoSuggestions" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_blackopening"
            android:id="@+id/fGGS_BlackOpening_TextView"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_blackopening_1st"
            android:id="@+id/fGGS_BlackOpening_TextView_1st"
            android:layout_gravity="center_horizontal|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_blackopening_2nd"
            android:id="@+id/fGGS_BlackOpening_TextView_2nd"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_blackopening_3rd"
            android:id="@+id/fGGS_BlackOpening_TextView_rd"
            android:layout_gravity="center_horizontal|bottom" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_Black_Opening_EditText_1st"
            android:layout_gravity="right|top"
            android:ems="5"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_Black_Opening_EditText_2nd"
            android:layout_gravity="right|center_vertical"
            android:ems="5"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_Black_Opening_EditText_3rd"
            android:layout_gravity="right|bottom"
            android:ems="5"
            android:inputType="textNoSuggestions" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:background="@drawable/customborder">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/game_search_screen_eco"
            android:id="@+id/fGGS_Eco_TextView"
            android:layout_gravity="left|top" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fGGS_Eco_EditText"
            android:layout_gravity="center"
            android:ems="3"
            android:inputType="textNoSuggestions" />
    </FrameLayout>
</LinearLayout>